--- a/package.json
+++ b/package.json
@@ -3,19 +3,25 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
-  "type":"module",
+  "type": "module",
   "scripts": {
     "start": "nodemon server.js"
   },
   "author": "Varun Chandra",
   "license": "ISC",
   "dependencies": {
+    "@tensorflow/tfjs": "^4.17.0",
     "bcryptjs": "^2.4.3",
+    "child_process": "^1.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "keras": "^1.0.1",
     "mongoose": "^8.0.1",
-    "nodemon": "^3.0.1"
+    "multer": "^1.4.5-lts.1",
+    "nodemon": "^3.0.1",
+    "numpy": "^0.0.1",
+    "path": "^0.12.7"
   }
 }
